@@ -1,4 +1,11 @@
 
+Next Bug Fix Release
+--------------------
+
+- In Oracle, don't trip over transaction descriptions longer than 2000
+  bytes.
+
+
 Version 1.2.0b2 (2009-05-05)
 ----------------------------
 
